# NTPClient

./: README.md
src/: CMakeLists.txt  blocking_client.hpp  network_time_requester.cpp  network_time_requester.hpp  ntp_packet.hpp
